--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,25 +8,14 @@
     <!--Xác định vị trí theo parent-->
 
     <TextView
-        app:layout_constraintHorizontal_weight="1"
+        app:layout_constraintHorizontal_bias="0.1"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/tvView2"
+        app:layout_constraintRight_toRightOf="parent"
         android:id="@+id/tvView1"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="View1"
-        android:textSize="30sp"
-        />
-    <TextView
-        app:layout_constraintHorizontal_weight="2"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/tvView1"
-        android:id="@+id/tvView2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="View2"
         android:textSize="30sp"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
